# p_Game_Engine_Cpp_OpenGL

./: .gitignore  CMakeLists.txt  DEV_LOG.md  MAC_SUPPORT.md  WORKFLOW_GUIDELINES.md
engine/: CMakeLists.txt
engine/source/: Engine.cpp  Engine.h  eng.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/level/: GameActor.cpp  GameActor.h  Level.cpp  Level.h
engine/source/render/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  RenderQueue.cpp  RenderQueue.h
engine/source/render/renderHelper/: Model.cpp  Model.h
engine/source/render/renderHelper/debuggingRenderAssets/: DOCS.md  debug_composite.frag  debug_composite.vert  debug_lambert_diffuse.frag  debug_lambert_diffuse.vert  debug_screen_space.frag  debug_screen_space.vert  debug_solid_color.frag  debug_solid_color.vert
source/: Game.cpp  Game.h  TestGameActor.cpp  TestGameActor.h
source/shaders/: solid_color.frag  solid_color.vert
